# DispOCR

./: .gitignore  CHANGELOG  LICENSE  README.rst  main.py  main.qml  pyproject.toml  pysidedeploy.spec  requirements.txt  tester.qml
.github/workflows/: main.yml
src/dispOCRtool/: ImageViewfinder.qml  RoiDialog.qml  __main__.py  main.qml  roi.qml  tester.py  tester.qml
src/dispOCRtool/app/: settings.py
src/dispOCRtool/obso/: __main__.py  app.py
src/dispOCRtool/ocr/: ModelPaddleBase.py  TextCorrection.py
src/dispOCRtool/qml/: ImageViewfinder.qml  RoiDialog.qml  main.qml
src/dispOCRtool/util/: Bridge.py  CameraThreads.py  CroppedImageRenderer.py  IntervalLogger.py  NumpyQImageRenderer.py  OpencvRenderer.py  ScriptHandler.py  ScriptThread.py
