[project]
name = "DispOCR"

[tool.pyside6-project]
files = ["src/dispOCRtool/RoiDialog.qml", "src/dispOCRtool/__main__.py", "src/dispOCRtool/main.qml", "src/dispOCRtool/tester.qml"]

# This project was generated with 0.3.26 using template: https://github.com/beeware/briefcase-template @ v0.3.26
[tool.briefcase]
project_name = "DispOCR"
bundle = "com.brandylibrando.apps"
version = "0.0.1"
url = "https://github.com/BrandyLibrando/THS_DispOCR"
license.file = "LICENSE"
author = "Julius Alvin Librando"
author_email = "brandywritesthings@gmail.com"

[tool.briefcase.app.dispOCRtool]
formal_name = "DispOCR"
description = "An OCR solution for recognizing text and numbers from electronic displays."
long_description = """More details about the app should go here.
"""
sources = [
    "src/dispOCRtool",
]
test_sources = [
    "tests",
]
requires = [
    "PySide6-Essentials",
    "PySide6-Addons",
    "shiboken6",
]
test_requires = [
]

[tool.briefcase.app.dispOCRtool.macOS]
universal_build = true
# As of Pyside 6.8, PySide enforces a macOS 12 minimum on wheels.
min_os_version = "12.0"
requires = [
    "std-nslog~=1.0.3",
]

[tool.briefcase.app.dispOCRtool.linux]
requires = [
]

[tool.briefcase.app.dispOCRtool.linux.system.debian]
system_requires = [
]
system_runtime_requires = [
    # Derived from https://doc.qt.io/qt-6/linux-requirements.html
    "libxext6",
    "libxrender1",
    "libx11-xcb1",
    "libxkbcommon-x11-0",
    "libxcb-image0",
    "libxcb-cursor0",
    "libxcb-shape0",
    "libxcb-randr0",
    "libxcb-xfixes0",
    "libxcb-sync1",
    "libxcb-icccm4",
    "libxcb-keysyms1",
    "libfontconfig1",
    "libsm6",
    "libice6",
    "libglib2.0-0",
    "libgl1",
    "libegl1",
    "libdbus-1-3",
]

[tool.briefcase.app.dispOCRtool.linux.system.rhel]
system_requires = [
]
system_runtime_requires = [
    "qt6-qtbase-gui",
]

[tool.briefcase.app.dispOCRtool.linux.system.suse]
system_requires = [
]
system_runtime_requires = [
    "libgthread-2_0-0",
    "libQt6Gui6",
]

[tool.briefcase.app.dispOCRtool.linux.system.arch]
system_requires = [
]
system_runtime_requires = [
    "qt6-base",
]

[tool.briefcase.app.dispOCRtool.linux.appimage]
manylinux = "manylinux_2_28"
system_requires = [
]
linuxdeploy_plugins = [
]

[tool.briefcase.app.dispOCRtool.linux.flatpak]
flatpak_runtime = "org.kde.Platform"
flatpak_runtime_version = "6.9"
flatpak_sdk = "org.kde.Sdk"

[tool.briefcase.app.dispOCRtool.windows]
requires = [
]

# Mobile deployments
[tool.briefcase.app.dispOCRtool.iOS]
supported = false

[tool.briefcase.app.dispOCRtool.android]
supported = false

# Web deployments
[tool.briefcase.app.dispOCRtool.web]
supported = false
