[project]
name = "DispOCR"

[tool.pyside6-project]
files = ["src/dispOCRtool/ImageViewfinder.qml", "src/dispOCRtool/RoiDialog.qml", "src/dispOCRtool/__init__.py", "src/dispOCRtool/__main__.py", "src/dispOCRtool/app/settings.py", "src/dispOCRtool/main.qml", "src/dispOCRtool/ocr/ModelPaddleBase.py", "src/dispOCRtool/util/Bridge.py", "src/dispOCRtool/util/CameraThreads.py", "src/dispOCRtool/util/CroppedImageRenderer.py", "src/dispOCRtool/util/OpencvRenderer.py", "src/dispOCRtool/util/__init__.py"]

[tool.briefcase]
project_name = "DispOCR"
bundle = "com.brandylibrando.apps"
version = "0.0.1"
url = "https://github.com/BrandyLibrando/THS_DispOCR"
license.file = "LICENSE"
author = "Julius Alvin Librando"
author_email = "brandywritesthings@gmail.com"

[tool.briefcase.app.dispOCRtool]
formal_name = "DispOCR"
description = "An OCR solution for recognizing text and numbers from electronic displays."
long_description = """This application is part of an OCR system setup for my bachelor's thesis requirement.

Overall, this thesis project aims to create a setup capable of recognizing characters from as many electronic displays as possible. It also aims to integrate hardware solutions into this OCR system, such as triggering actuators and a variable light system to improve performance on low-light conditions when using on screens with no backlight capabilities.

This program mainly serves as the GUI of the setup, to be deployed in Raspberry Pi or any target desktop environment. This GUI connects to the scripts for predicting text in the OCR pipeline, as well as to web-hosted Ollama APIs for the text correction (result post-processing).
"""
sources = [
    "src/dispOCRtool",
    "src/dispOCRtool/util",
]
test_sources = [
    "tests",
]
requires = [
    "PySide6-Essentials",
    "PySide6-Addons",
    "shiboken6",
    "numpy<2.0",
    "opencv-python<=4.10",
    "opencv-python-headless<=4.10",
    "cv2_enumerate_cameras",
    "depthai==3.0.0",
    "paddleocr==3.3.2",
    "paddlepaddle==3.2.0",
]
test_requires = [
]

[tool.briefcase.app.dispOCRtool.macOS]
universal_build = true
# As of Pyside 6.8, PySide enforces a macOS 12 minimum on wheels.
min_os_version = "12.0"
requires = [
    "std-nslog~=1.0.3",
]

[tool.briefcase.app.dispOCRtool.linux]
requires = [
]

[tool.briefcase.app.dispOCRtool.linux.system.debian]
system_requires = [
]
system_runtime_requires = [
    # Derived from https://doc.qt.io/qt-6/linux-requirements.html
    "libxext6",
    "libxrender1",
    "libx11-xcb1",
    "libxkbcommon-x11-0",
    "libxcb-image0",
    "libxcb-cursor0",
    "libxcb-shape0",
    "libxcb-randr0",
    "libxcb-xfixes0",
    "libxcb-sync1",
    "libxcb-icccm4",
    "libxcb-keysyms1",
    "libfontconfig1",
    "libsm6",
    "libice6",
    "libglib2.0-0",
    "libgl1",
    "libegl1",
    "libdbus-1-3",
]

[tool.briefcase.app.dispOCRtool.linux.system.rhel]
system_requires = [
]
system_runtime_requires = [
    "qt6-qtbase-gui",
]

[tool.briefcase.app.dispOCRtool.linux.system.suse]
system_requires = [
]
system_runtime_requires = [
    "libgthread-2_0-0",
    "libQt6Gui6",
]

[tool.briefcase.app.dispOCRtool.linux.system.arch]
system_requires = [
]
system_runtime_requires = [
    "qt6-base",
]

[tool.briefcase.app.dispOCRtool.linux.appimage]
manylinux = "manylinux_2_28"
system_requires = [
]
linuxdeploy_plugins = [
]

[tool.briefcase.app.dispOCRtool.linux.flatpak]
flatpak_runtime = "org.kde.Platform"
flatpak_runtime_version = "6.9"
flatpak_sdk = "org.kde.Sdk"

[tool.briefcase.app.dispOCRtool.windows]
requires = [
]

# Mobile deployments
[tool.briefcase.app.dispOCRtool.iOS]
supported = false

[tool.briefcase.app.dispOCRtool.android]
supported = false

# Web deployments
[tool.briefcase.app.dispOCRtool.web]
supported = false
